fixed whitespace issue in the header and footer

--- a/coffee-kiosk/src/index.css
+++ b/coffee-kiosk/src/index.css
@@ -18,8 +18,8 @@
   padding: 0;
 }
 
-body{
-  
+body,html{
+  height: 100%;
   font-family: "Nunito Sans", serif;
   
 }
